tests/miniJava/neg/000539_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { false if ( 0 ) { } else { } } }
